main.tf
resource "aws_vpc" "web_vpc" {

  cidr_block = "10.0.0.0/16"

  tags = {

    Name = "web-vpc"

  }

}



resource "aws_subnet" "web_subnet" {

  vpc_id                  = aws_vpc.web_vpc.id

  cidr_block              = "10.0.1.0/24"

  map_public_ip_on_launch = true



  tags = {

    Name = "web-subnet"

  }

}

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.web_vpc.id

}



resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.web_vpc.id



  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

}



resource "aws_route_table_association" "rta" {

  subnet_id      = aws_subnet.web_subnet.id

  route_table_id = aws_route_table.public_rt.id

}

resource "aws_security_group" "web_sg" {

  name   = "web-sg"

  vpc_id = aws_vpc.web_vpc.id



  ingress {

    from_port   = 22

    to_port     = 22

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }



  ingress {

    from_port   = 80

    to_port     = 80

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }



  egress {

    from_port   = 0

    to_port     = 0

    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

}

resource "aws_instance" "web_server" {

  ami = "ami-03f4878755434977f"  # Amazon Ubuntu AMI (ap-south-1)

  instance_type          = var.instance_type

  subnet_id              = aws_subnet.web_subnet.id

  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.web_sg.id]



  user_data = <<-EOF
	#!/bin/bash

	sudo apt update -y
	sudo apt install -y apache2
	sudo systemctl start apache2
	sudo systemctl enable apache2
	echo "<h1>Anand's Terraform EC2 Web Server for Project-1</h1>" > /var/www/html/index.html
	EOF



  tags = {

    Name = "terraform-web-server"

  }

}
